//
// GRAKN.AI - THE KNOWLEDGE GRAPH
// Copyright (C) 2018 Grakn Labs Ltd
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option java_package = "grakn.core.rpc.proto";
option java_outer_classname = "KeyspaceProto";

package keyspace;

service KeyspaceService {
    rpc create (Keyspace.Create.Req) returns (Keyspace.Create.Res);
    rpc retrieve (Keyspace.Retrieve.Req) returns (Keyspace.Retrieve.Res);
    rpc delete (Keyspace.Delete.Req) returns (Keyspace.Delete.Res);
}

message Keyspace {
    message Retrieve {
        message Req {}
        message Res {
            repeated string names = 1;
        }
    }

    message Create {
        message Req {
            string name = 1;
        }
        message Res {}
    }

    message Delete {
        message Req {
            string name = 1;
        }
        message Res {}
    }
}